Fixed spacing

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -670,13 +670,16 @@ hr {
   margin-left: 11%;
 }
 */
-
+.temp{
+  padding-left: 10%;
+  padding-right: 7%;
+    padding-bottom: 15%;
+}
 /* Main project page */
 .project-row {
   padding-left: 10%;
   padding-right: 7%;
-  /* padding-bottom: 5%; */
-  padding-bottom: 15%;
+  padding-bottom: 5%;
 }
 
 .grid {
